--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,24 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".Registro">
+
+
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+
+        </activity>
+        <activity android:name=".Login" />
+        <activity android:name=".AportacionesPe" />
+        <activity android:name=".PremiosDisticiones" />
+        <activity android:name=".ParticipacionColCam" />
+        <activity android:name=".LogrosProfesionales" />
+        <activity android:name=".ExperienciaDisenoInge" />
+        <activity android:name=".ExperienciaProfesional" />
         <activity
             android:name=".ProductosAcademicos"
             android:exported="true" />
@@ -28,13 +46,7 @@
             android:exported="true" />
         <activity
             android:name=".Partes_formulario"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:exported="true"> </activity>
         <activity
             android:name=".Formacion_docente"
             android:exported="true" />
