--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,24 +9,21 @@
 
     <application
         android:allowBackup="true"
-        android:usesCleartextTraffic="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".Registro"></activity>
-        <activity android:name=".Login" >
-
-
+        android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".Prueba"></activity>
+        <activity android:name=".Registro" />
+        <activity android:name=".Login">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
-
 
         </activity>
         <activity android:name=".AportacionesPe" />
@@ -49,7 +46,7 @@
             android:exported="true" />
         <activity
             android:name=".Partes_formulario"
-            android:exported="true"> </activity>
+            android:exported="true" />
         <activity
             android:name=".Formacion_docente"
             android:exported="true" />
