--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,17 @@
         android:usesCleartextTraffic="true">
         <activity android:name=".Prueba"></activity>
         <activity android:name=".Registro" />
-        <activity android:name=".Login"> </activity>
+        <activity android:name=".Login">
+
+
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+
+        </activity>
         <activity android:name=".AportacionesPe" />
         <activity android:name=".PremiosDisticiones" />
         <activity android:name=".ParticipacionColCam" />
@@ -38,17 +48,7 @@
             android:exported="true" />
         <activity
             android:name=".Partes_formulario"
-            android:exported="true" >
-
-
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-
-
-        </activity>
+            android:exported="true" ></activity>
         <activity
             android:name=".Formacion_docente"
             android:exported="true" />
